--- a/Delmon Managment System/Forms/PrintingFrm.resx
+++ b/Delmon Managment System/Forms/PrintingFrm.resx
@@ -126,4 +126,7 @@
   <metadata name="dataTable3TableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>301, 17</value>
   </metadata>
+  <metadata name="dataTable3BindingSource1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>486, 17</value>
+  </metadata>
 </root>
