--- a/Delmon Managment System/Forms/AssetFrm.resx
+++ b/Delmon Managment System/Forms/AssetFrm.resx
@@ -160,4 +160,7 @@
         GKrR42PHjvWZMGEC5hKlO8ByGt2Z+BKDKH3/JHff7rqNGfN/T4Y3QjOj+eYAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
