--- a/Delmon Managment System/Forms/PrintingFrm.resx
+++ b/Delmon Managment System/Forms/PrintingFrm.resx
@@ -117,6 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="picvisascreen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABIAAAASCAYAAABWzo5XAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAWVJREFUOE+llM9Kw0AQxiPeBA/eBD168OIhmZ0YStWbPkFBxKsi3hQPRR/A2uxG
+        wUOpgtdCRcE+SPEq3vRB9Jt2qoH8odEPPnY2M/lldpONl6da7WqeyfaYXLfIxtiOlheLub0IUFOnuUL+
+        WsOsiOzqemAppGSbjb2VOG104Xve14zUloKQHKD4sNBkn6VbrS0FFSch5Jt/AhF15zQcqTLIGLeFZbzi
+        7Xxgr94x39f89KAwbC1jbMMPMsfeWPg8DJINzKcHjTfWHcN9dPSEeYsoPpFcZRDGUzbu8V+gKHJLgCSI
+        f5aG8QLfWB1jtc1mjjfRzdCQ+4TfEO9pvhqovna5IJbuJnGj0Z+tBDImZnTwInvza3fP7A4qgcLARbhx
+        Vy+NJGeQKTkSEMBnsLyQgaazEpDvuxV8jHfpjtDhDQd2R0ByoOUAC1xvy0pAGuZKQJOllQpP7+DpuT+y
+        sW1PfnpanpLnfQMYsN//OSV/kAAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="delmon.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
