--- a/Delmon Managment System/Forms/BillsFrm.resx
+++ b/Delmon Managment System/Forms/BillsFrm.resx
@@ -296,8 +296,14 @@
         GKrR42PHjvWZMGEC5hKlO8ByGt2Z+BKDKH3/JHff7rqNGfN/T4Y3QjOj+eYAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="BillsReport1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>104, 17</value>
+  </metadata>
   <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
+  </metadata>
+  <metadata name="BillsReport2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>220, 17</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
